[gd_scene load_steps=6 format=3 uid="uid://b3s5snk2jxs5x"]

[ext_resource type="Script" path="res://scripts/weapon.gd" id="1_af4ky"]
[ext_resource type="Texture2D" uid="uid://b62ijuvkytq5t" path="res://art/Hammer Cartoon PNG.png" id="3_pdwkc"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cs4aa"]
friction = 0.0
bounce = 0.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7k4uq"]
size = Vector2(82.5, 117.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j73sd"]
size = Vector2(267, 134)

[node name="hammer" type="RigidBody2D" groups=["weapons"]]
z_index = 5
collision_layer = 4
collision_mask = 6
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_cs4aa")
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(470, 0)
can_sleep = false
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_af4ky")

[node name="DamageArea" type="Area2D" parent="."]
scale = Vector2(0.166016, 0.174157)
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
z_index = 2
position = Vector2(1108.33, -22.9678)
scale = Vector2(6.02352, 5.74195)
shape = SubResource("RectangleShape2D_7k4uq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(184.75, -3.875)
shape = SubResource("RectangleShape2D_7k4uq")

[node name="HammerCartoonPng" type="Sprite2D" parent="."]
position = Vector2(121, -5.00001)
rotation = 0.750492
scale = Vector2(0.257938, 0.258508)
texture = ExtResource("3_pdwkc")

[node name="InteractableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(101, -4)
shape = SubResource("RectangleShape2D_j73sd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
